# HuiCopilotCode

./: .gitignore  README.md  package-lock.json  package.json  question.md  vite.config.ts
src/: App.tsx  EmbeddedTerminal.tsx  index.css
src-tauri/: Cargo.toml  error.json  tauri.conf.json
src-tauri/Portable/ClaudeBin/: package-lock.json
src-tauri/Portable/Git/etc/: hosts
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
