[package]
name = "claude-code-installer"
version = "0.1.0"
description = "Claude Code 一键自动化安装器"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_code_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "macros"] }
dirs = "6"
portable-pty = "0.8.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
